<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignupFragment"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/sign_up_close_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="346dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            android:padding="16dp"
            android:src="@drawable/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.928"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:contentDescription="TODO"
            android:src="@drawable/logomain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20sp"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:hint="Email id :"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/sign_up_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20sp"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:hint="Enter your name :"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_email" />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20sp"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:hint="Password (at least 8 characters):"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_name" />

        <EditText
            android:id="@+id/sign_up_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20sp"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:hint="Confirm Password :"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_password" />


        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/slider_background"
            android:enabled="false"
            android:text="Sign up"
            android:textColor="#50ffff"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm_password"
            app:layout_constraintVertical_bias="0.38" />

        <TextView
            android:id="@+id/sign_in_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:text="Already have an account? Sign in"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.439"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

        <ProgressBar
            android:id="@+id/sign_up_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="182dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="182dp"
            android:layout_marginBottom="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm_password"
            app:layout_constraintVertical_bias="0.384" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>